Name:                QuickFuzz
Version:             0.1.0.0
Synopsis:            An experimental grammar fuzzer in Haskell using QuickCheck.
License:             GPL-3
License-file:        LICENSE
Author:              Pablo Buiras <buiras@chalmers.se>, Gustavo Grieco <grieco@cifasis-conicet.gov.ar>, Martín Escarrá <mescarra@gmail.com>
Build-type:          Simple
Extra-source-files:  README.md
Cabal-version:       >=1.10


Flag Imgs
  Description: Supports Tga, Png, Bmp, Jpeg, Tiff and Gif formats.
  Default:     False
  Manual:      True


Flag Archs
  Description: Supports ... formats.
  Default:     False
  Manual:      True

Flag Codes
  Description: Supports ... formats.
  Default:     False
  Manual:      True

Flag Docs
  Description: Supports ... formats.
  Default:     False
  Manual:      True

Flag Net
  Description: Supports ... formats.
  Default:     False
  Manual:      True

Flag Media
  Description: Supports ... formats.
  Default:     False
  Manual:      True

Flag Pki
  Description: Supports ... formats.
  Default:     False
  Manual:      True


executable QuickFuzz

    Main-is:           Main.hs

    if flag(codes)
        cpp-options: -DCODES

    if flag(imgs)
        cpp-options: -DIMGS

    if flag(archs)
        cpp-options: -DARCHS

    if flag(docs)
        cpp-options: -DDOCS

    if flag(net)
        cpp-options: -DNET

    if flag(media)
        cpp-options: -DMEDIA

    if flag(pki)
        cpp-options: -DPKI


  other-extensions:    CPP, FlexibleContexts, TypeFamilies, TupleSections, ExistentialQuantification, BangPatterns, ScopedTypeVariables, TypeSynonymInstances, Rank2Types, FlexibleInstances, RankNTypes, MultiParamTypeClasses, GADTs, StandaloneDeriving, TypeOperators, GeneralizedNewtypeDeriving, FunctionalDependencies, OverloadedStrings

  build-depends:      base, bytestring, containers, vector, primitive, transformers, binary, QuickCheck, quickcheck-unicode, mtl, random, ghc-prim,
                      process, process-extras, deepseq, derive, unix, linear, template-haskell, directory, pretty, argparser,
                      split, wl-pprint, text, parallel-io, monad-par,
                      abstract-par, megadeth, ghc-mod, blaze-html, haskell-src-exts, haskell-src-meta   
  if flag(codes)
      build-depends:   HaXml, language-ecmascript, language-dot, language-css, language-python, language-glsl, json, uniplate,
                       language-lua, language-bash, shell-escape

  if flag(imgs)
      build-depends:  zlib, JuicyPixels, svg-tree, xml, AC-PPM

  if flag(archs)
      build-depends:  zlib, tar, zip-archive, base16-bytestring

  if flag(docs)
      build-depends: pandoc-types, pandoc, data-default, hps, hcg-minus, iCalendar

  if flag(pki)
      build-depends: asn1-types, asn1-encoding, x509, time

  if flag(net)
      build-depends: network, HTTP, dns, iproute, unbounded-delays, concurrent-extra,base16-bytestring, network-uri

  if flag(media)
      build-depends: hogg, wavy, idiii, ttasm, HCodecs


  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O2 -optc-O3 -threaded -rtsopts
