name:                QuickFuzz
version:             0.1.0.0
synopsis:            An experimental grammar fuzzer in Haskell using QuickCheck.
license:             GPL-3
license-file:        LICENSE
author:              Pablo Buiras   <buiras@chalmers.se>,
                     Gustavo Grieco <grieco@cifasis-conicet.gov.ar>,
                     Martín Ceresa  <ceresa@cifasis-conicet.gov.ar>
                     Martín Escarrá <mescarra@gmail.com>
                     Agustín Mista  <amista@dcc.fceia.unr.edu.ar>                    

build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag debug
    description: Enable debug messages
    default: False

flag image
  Description: Supports Tga, Png, Bmp, Jpeg, Tiff and Gif formats.
  Default:     False
  Manual:      True

flag archs
  Description: Supports ... formats.
  Default:     False
  Manual:      True

flag code
  Description: Supports ... formats.
  Default:     False
  Manual:      True

flag docs
  Description: Supports ... formats.
  Default:     False
  Manual:      True

flag media
  Description: Supports ... formats.
  Default:     False
  Manual:      True

flag pki
  Description: Supports ... formats.
  Default:     False
  Manual:      True

flag net
  Description: Supports ... formats.
  Default:     False
  Manual:      True

flag all
  Description: Enables all file formats
  Default:     False
  Manual:      True


library
    hs-source-dirs: src
    exposed-modules:    
        Test.QuickFuzz.Derive
        Test.QuickFuzz.Derive.Actions
        Test.QuickFuzz.Derive.Mutation
        Test.QuickFuzz.Derive.Arbitrary
        Test.QuickFuzz.Derive.Generator
        Test.QuickFuzz.Derive.Show
        Test.QuickFuzz.Derive.Fixable
        Test.QuickFuzz.Gen.Base
        Test.QuickFuzz.Gen.Base.Value
        Test.QuickFuzz.Gen.Base.ByteString
        Test.QuickFuzz.Gen.Base.Regex
        Test.QuickFuzz.Gen.Base.String
        Test.QuickFuzz.Gen.Base.Time
        Test.QuickFuzz.Gen.Base.Unicode
        Test.QuickFuzz.Gen.Base.Vector
        Test.QuickFuzz.Gen.FormatInfo
        Test.QuickFuzz.Global

    build-depends: 
        base, bytestring, QuickCheck, megadeth, template-haskell, vector,
        ghc-prim, split, text, containers, time, derive, binary, mtl, 
        transformers, ghc-mod, haskell-src-exts, haskell-src-meta,
        global-variables, deepseq, data-default
    
    if flag(archs) || flag(all)
        cpp-options: -DARCHS
        exposed-modules:
            Test.QuickFuzz.Gen.Archive
            Test.QuickFuzz.Gen.Archive.Tar
            Test.QuickFuzz.Gen.Archive.Zip

        build-depends:
            tar, zip-archive

    if flag(media) || flag(all)
        cpp-options: -DMEDIA
        exposed-modules:
            Test.QuickFuzz.Gen.Media
            Test.QuickFuzz.Gen.Media.Wav

        build-depends:
            wavy

    if flag(docs) || flag(all)
        cpp-options: -DDOCS
        exposed-modules:
            Test.QuickFuzz.Gen.Document
            Test.QuickFuzz.Gen.Document.Html
            Test.QuickFuzz.Gen.Document.Css
            Test.QuickFuzz.Gen.Document.PDF
            Test.QuickFuzz.Gen.Document.PS
            Test.QuickFuzz.Gen.Document.EPS
            Test.QuickFuzz.Gen.Document.Xml

        build-depends:
            blaze-html, blaze-markup, easyrender, HaXml, xmlgen, blaze-builder, language-css

    if flag(code) || flag(all)
        cpp-options: -DCODE
        exposed-modules:
            Test.QuickFuzz.Gen.Code
            Test.QuickFuzz.Gen.Code.C
            Test.QuickFuzz.Gen.Code.Js
            Test.QuickFuzz.Gen.Code.Python
            Test.QuickFuzz.Gen.Code.Go
            Test.QuickFuzz.Gen.Code.Lua

        build-depends:
            language-c, language-ecmascript, language-python, language-go, language-lua, pretty
    
    if flag(image) || flag(all)
        cpp-options: -DIMAGE
        exposed-modules:
            Test.QuickFuzz.Gen.Base.Image
            Test.QuickFuzz.Gen.Image
            Test.QuickFuzz.Gen.Image.SVG
            Test.QuickFuzz.Gen.Image.Gif
            Test.QuickFuzz.Gen.Image.Png
            Test.QuickFuzz.Gen.Image.Tiff

        build-depends:
            JuicyPixels, svg-tree, xml
 
    if flag(pki) || flag(all)
        cpp-options: -DPKI
        exposed-modules:
            Test.QuickFuzz.Gen.Pki
            Test.QuickFuzz.Gen.Pki.ASN1
            Test.QuickFuzz.Gen.Pki.X509
            Test.QuickFuzz.Gen.Pki.CRL

        build-depends: asn1-types, asn1-encoding, x509


    if flag(net) || flag(all)
        cpp-options: -DNET
        exposed-modules:
            Test.QuickFuzz.Gen.Network
            Test.QuickFuzz.Gen.Network.HTTP

        build-depends:
            HTTP
   
    default-language: Haskell2010
    ghc-options: -O2 -optc-O3 -threaded -rtsopts


executable QuickFuzz
    hs-source-dirs: app
    main-is: Main.hs
    other-modules:
        Args
        Fuzzers
        Debug
        Exception
        Formats
        DeriveDispatcher
        Process
        Utils
        Utils.Generation
        Utils.Patch
        Utils.Console
        Utils.Shrink
        Utils.Unique
        Run.Test    
        Run.Gen
        Run.Serve
        Run.Exec
        Run.Shrink
        Run.List

    if flag(debug)
        cpp-options: -DDEBUG
    if flag(archs) || flag(all)
        cpp-options: -DARCHS
    if flag(media) || flag(all)
        cpp-options: -DMEDIA
    if flag(docs) || flag(all)
        cpp-options: -DDOCS
    if flag(code) || flag(all)
        cpp-options: -DCODE
    if flag(image) || flag(all)
        cpp-options: -DIMAGE
    if flag(pki) || flag(all)
        cpp-options: -DPKI
    if flag(net) || flag(all)
        cpp-options: -DNET
        build-depends:
            network
    
    other-extensions: 
        CPP, ViewPatterns

    build-depends: 
        QuickFuzz, base, bytestring, QuickCheck, argparser, split, containers,
        template-haskell, filepath, directory, ansi-terminal, time, process,
        silently, parallel, deepseq, random, process-extras, network, unix,
        global-variables, Diff, stringsearch

    default-language: Haskell2010
    ghc-options: -O2 -optc-O3 -threaded -rtsopts -ddump-splices
