name:            tar
version:         0.4.2.1
license:         BSD3
license-file:    LICENSE
author:          Bjorn Bringert <bjorn@bringert.net>
                 Duncan Coutts <duncan@community.haskell.org>
maintainer:      Duncan Coutts <duncan@community.haskell.org>
copyright:       2007 Bjorn Bringert <bjorn@bringert.net>
                 2008-2015 Duncan Coutts <duncan@community.haskell.org>
category:        Codec
synopsis:        Reading, writing and manipulating ".tar" archive files.
description:     This library is for working with \"@.tar@\" archive files. It
                 can read and write a range of common variations of archive
                 format including V7, USTAR, POSIX and GNU formats. It provides
                 support for packing and unpacking portable archives. This
                 makes it suitable for distribution but not backup because
                 details like file ownership and exact permissions are not
                 preserved.
build-type:      Simple
cabal-version:   >=1.8
extra-source-files: changelog.md

source-repository head
  type: darcs
  location: http://code.haskell.org/tar/

flag old-time

library
  build-depends: base == 4.*,
                 bytestring >= 0.10,
                 filepath,
                 directory,
                 array
  if flag(old-time)
    build-depends: directory < 1.2, old-time
  else
    build-depends: directory >= 1.2, time

  exposed-modules:
    Codec.Archive.Tar
    Codec.Archive.Tar.Entry
    Codec.Archive.Tar.Check
    Codec.Archive.Tar.Index
    Codec.Archive.Tar.Types
    Codec.Archive.Tar.Read
    Codec.Archive.Tar.Write
    Codec.Archive.Tar.Pack
    Codec.Archive.Tar.Unpack
    Codec.Archive.Tar.Index.StringTable
    Codec.Archive.Tar.Index.IntTrie

  other-extensions:
    CPP, BangPatterns,
    DeriveDataTypeable, ScopedTypeVariables

  ghc-options: -Wall -fno-warn-unused-imports

test-suite properties
  type:          exitcode-stdio-1.0
  build-depends: base,
                 bytestring,
                 filepath, directory,
                 old-time, time,
                 array,
                 QuickCheck == 2.*,
                 tasty            == 0.10.*,
                 tasty-quickcheck == 0.8.*

  hs-source-dirs: . test

  main-is: test/Properties.hs
  cpp-options: -DTESTS

  other-modules:
    Codec.Archive.Tar.Index
    Codec.Archive.Tar.Index.StringTable
    Codec.Archive.Tar.Index.IntTrie

  other-extensions:
    CPP, BangPatterns,
    DeriveDataTypeable, ScopedTypeVariables

